force-app/main/default/objects/Custom_Exception__c/Custom_Exception__c.object-meta.xml
<CustomObject>
    <label>Custom Exception</label>
    <nameField>
        <displayFormat>CE-{00000000}</displayFormat>
        <label>Custom Exception Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>