force-app/main/default/objects/Custom_Exception__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Custom_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>