force-app/main/default/objects/Custom_Exception__c/fields/Error_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Error_RecordId__c</fullName>
    <label>Error RecordId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>