force-app/main/default/objects/Custom_Exception__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Custom Exceptions</relationshipLabel>
    <relationshipName>Custom_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>