force-app/main/default/objects/Custom_Exception__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>Custom_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>