force-app/main/default/objects/Custom_Exception__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>