force-app/main/default/objects/Custom_Exception__c/fields/Request_Json__c.field-meta.xml
<CustomField>
    <fullName>Request_Json__c</fullName>
    <label>Request Json</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>