force-app/main/default/objects/Custom_Exception__c/fields/Response_Json__c.field-meta.xml
<CustomField>
    <fullName>Response_Json__c</fullName>
    <label>Response Json</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>