force-app/main/default/objects/Custom_Exception__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <label>StackTrace</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>