force-app/main/default/objects/Custom_Exception__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exception_Type__c</columns>
    <columns>Error_RecordId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Response_Json__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>